[package]
name = "poc-golang-vue2"
version = "2.0.0"
authors = ["Ninjapiraatti"]
edition = "2018"

[dependencies]
actix-files = "0.5.0"
actix-session = "0.4.1"
actix-identity = "0.3"
actix-web = "3.3"
actix-rt = "1.1"
env_logger = "0.8"
dotenv = "0.15"
r2d2 = "0.8"
rust-argon2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
actix-rt = "1.1"
